mise en place de la page d'accueil

--- a/home.html
+++ b/home.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-            <span class="logo"><a href="#">Nom du site</a></span>
+            <span class="logo"><a href="home.html">Nom du site</a></span>
             <ul class="lien_header">
                 <li><a href="#">Home</a></li>     
-                <li><a href="#">About us</a></li>
+                <li><a href="#2">About us</a></li>
                 <li><a href="#">menu</a></li>
                 <li><a href="#">contact</a></li>
             </ul>
@@ -24,13 +24,113 @@
             </p>
         </nav>
         <section class="section1">
-            <div><p>Nom du site</p>
-            <p>Coctktail Bar</p></div>
+            <div class="div_section1">
+                <h1>Nom du site</h1>
+                <p>Coctktail Bar</p>
+            </div>
+            <div class="div_reservation">
+                <h3>Reserver</h3>
+                <form action="" method="get">
+                    <input type="date" id="date" name="date" class="formulaire">
+                        <select name="place" class="formulaire">
+                                <option value=""><span>Combien de places souhaitez vous reserver ?</span></option>
+                                <option value="2">2 places</option>
+                                <option value="3">3 places</option>
+                                <option value="4">4 places</option>
+                                <option value="5">5 places</option>
+                                <option value="6">6 places</option>
+                                <option value="8">8 places</option>
+                        </select>
+                        <select name="horaire" class="formulaire">
+                                <option value=""><span>Pour quelle heure souhaitez vous reservez ?</span></option>
+                            <optgroup label="En Matinée">
+                                <option value="2">10h30 places</option>
+                                <option value="4">11h00 places</option>
+                                <option value="5">11h30 places</option>
+                                <option value="6">12h00 places</option>
+                                <option value="8">12h30 places</option>
+                            </optgroup>
+                            <optgroup label="Vers la fin de Matinée">
+                                <option value="8">13h00 places</option>
+                                <option value="8">13h30 places</option>
+                                <option value="8">14h00 places</option>
+                                <option value="8">14h30 places</option>
+                            </optgroup>
+                            <optgroup label="Début d'après midi">
+                                <option value="8">15h00 places</option>
+                                <option value="8">15h30 places</option>
+                                <option value="8">16h00 places</option>
+                                <option value="8">16h30 places</option>
+                                <option value="8">17h00 places</option>
+                                <option value="8">17h30 places</option>
+                            </optgroup>
+                            <optgroup label="En Soirée">
+                                <option value="8">18h00 places</option>
+                                <option value="8">18h30 places</option>
+                                <option value="8">19h00 places</option>
+                                <option value="8">19h30 places</option>
+                            </optgroup>
+                            <optgroup label="Plutôt tard dans la soirée">
+                                <option value="8">20h00 places</option>
+                                <option value="8">20h30 places</option>
+                                <option value="8">21h00 places</option>
+                                <option value="8">21h30 places</option>
+                                <option value="8">22h00 places</option>
+                                <option value="8">22h30 places</option>
+                                <option value="8">23h00 places</option>
+                                <option value="8">23h30 places</option>
+                            </optgroup>
+                        </select>
+                            <input type="submit" formmethod="get" value="Reserver" class="bouton">
+               </form> 
+            </div>
         </section>
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, eos mollitia aliquid delectus laudantium debitis aliquam?
- Possimus neque exercitationem eligendi cumque provident nisi molestias voluptatem repellat dignissimos cum omnis doloribus veniam odio, aspernatur sed accusamus incidunt maiores corrupti earum, inventore dicta nobis repellendus odit! Illo, quo sed autem modi quasi repudiandae culpa error quisquam sint beatae provident eius labore ab sit laboriosam et, aut illum dolore excepturi sunt! Quis iusto ipsa sint est fuga quam repudiandae id vero. Eius quos officiis eaque sequi. Ex harum necessitatibus officia consequuntur, enim labore molestias dolorem consectetur quod vero corporis odio, repellat qui voluptas hic quae blanditiis. In qui ducimus aut, natus, vero id aperiam beatae nihil deserunt alias vel animi. Commodi a hic incidunt nostrum veritatis ea consequatur voluptas illum iure inventore illo pariatur, recusandae, quod quidem earum qui provident aliquam ab perspiciatis ut. Exercitationem molestias quod veritatis dolor hic tempora nostrum inventore eos repellat. Esse ab, soluta deleniti obcaecati tenetur tempora accusamus architecto illo veritatis voluptas blanditiis asperiores harum. Repellendus nulla doloribus perspiciatis. Ab optio cupiditate esse ducimus temporibus, impedit harum asperiores voluptatibus illum doloribus nesciunt tempore ea consequuntur reprehenderit iusto nemo culpa sint molestiae quasi labore soluta? Dolorum quod illo porro tempore repudiandae, error obcaecati. Magni alias in consectetur cum illum, at culpa quis neque distinctio magnam recusandae. Amet deserunt, ab enim quaerat impedit mollitia modi iste nesciunt incidunt nam assumenda in aspernatur soluta velit corporis molestias perspiciatis atque iure animi? Magnam sapiente sequi quasi dolor nobis quae eveniet deleniti iusto! Saepe incidunt perferendis unde, aspernatur architecto, quis rem alias doloribus accusamus iste ullam beatae adipisci cumque velit quos dolores facilis, ea minus. Praesentium saepe fuga eos reiciendis consectetur autem. Voluptatum iusto, libero consequuntur velit sequi fugit dolores harum a. Praesentium dignissimos sunt voluptatum a eius consequuntur tenetur unde amet doloremque possimus ab modi rem alias laborum tempora tempore beatae error corrupti optio, similique qui architecto labore! Corporis voluptate accusantium, dolore incidunt assumenda enim dicta nulla sunt odio harum delectus perspiciatis accusamus molestiae quae nihil sed blanditiis. Deserunt ea excepturi laborum quia doloremque eum quaerat? Rerum, eius! Aliquam sunt nesciunt neque itaque repudiandae a quaerat, error odit voluptatem sequi voluptatum. Debitis, ex aperiam rem nobis commodi temporibus assumenda minus praesentium ratione velit nulla quos corporis. Autem, illum eveniet voluptatum eligendi consequuntur necessitatibus dolores quisquam quos officia vel aliquid ratione quibusdam a ut magnam sit corporis aspernatur at temporibus dignissimos! Saepe earum, magni possimus minima voluptatibus deleniti asperiores, perferendis eos ducimus voluptate nulla tempore fugit voluptates temporibus! Culpa delectus, expedita deleniti consequuntur sed sit reiciendis quos facilis fuga commodi dolor aperiam fugit ipsum. Tempore quidem eius veritatis et, consequuntur officiis, maiores magni voluptatem consectetur possimus nisi nihil. Quae quos alias placeat similique ratione eum rem, eveniet dolorum recusandae temporibus aliquam dolorem pariatur veritatis commodi quibusdam expedita illum tenetur nesciunt praesentium id, provident, accusantium quis! Aspernatur excepturi quas maiores laborum facilis expedita sunt! Autem, reiciendis cum. Doloremque odio ea distinctio harum. Nostrum, nisi provident magnam voluptas ipsa natus vel eum at fugit repellat cupiditate ipsam quas, est enim tenetur perferendis laboriosam totam! Amet id, voluptatibus similique veritatis quo necessitatibus odio! Et culpa laborum nostrum iure enim id quos a earum natus. Maiores at beatae dolorem non amet impedit doloremque quaerat, voluptatem similique fugit doloribus assumenda sunt tempora pariatur nobis officiis suscipit dolor earum velit molestiae quae saepe natus consequatur blanditiis. Suscipit voluptatum necessitatibus vero voluptas, culpa autem esse dolor temporibus ipsa maxime, velit impedit tenetur nulla pariatur expedita quisquam excepturi officia laboriosam eveniet. Cumque repellendus labore, animi unde nam porro ipsam voluptatum in excepturi voluptas minima enim quos delectus dignissimos expedita cupiditate soluta aliquam nihil. Tenetur accusantium voluptatibus provident inventore eius sapiente modi fugiat exercitationem impedit, quam fuga, mollitia repellendus commodi ullam sed blanditiis molestiae architecto facere labore ratione maxime suscipit aperiam aut ducimus. Rerum animi atque eius quasi similique, et perferendis facilis a quis dicta aliquam at ut, officia sit maiores nobis dolorum id laudantium reiciendis nisi pariatur! Voluptatem, alias doloremque? Qui, ut? Temporibus ex voluptatum explicabo architecto quia voluptas neque cum ducimus beatae repellendus. Unde debitis cupiditate perferendis dicta quasi esse mollitia? Perspiciatis enim unde fugiat corporis iste provident reprehenderit animi esse sed asperiores minus molestias eum voluptatibus consequuntur inventore quam illo, rem aliquam. Quidem numquam repudiandae unde amet voluptate expedita in quas distinctio enim consequuntur? Aliquid maxime voluptate ad iure labore! Minima quisquam ipsam debitis reprehenderit qui facere id illo vero quaerat, cum vitae commodi dolorum! Qui voluptatem blanditiis molestias ab assumenda explicabo, porro architecto accusantium cum laudantium, fuga tempora eaque minus commodi suscipit officia dolorem deserunt optio cumque inventore aut sit quaerat officiis! Soluta dolorum repellendus eveniet. Quibusdam commodi sint nisi eius omnis, quisquam iste reprehenderit quo. Nemo amet velit eos aspernatur rem laborum, dicta autem temporibus praesentium, enim hic, eligendi ad expedita sit tempore corrupti perspiciatis illo numquam tenetur harum excepturi vitae. Illo cum quaerat aperiam quis quasi nihil nulla, ab laborum? Laborum neque illum laboriosam, placeat obcaecati architecto numquam ratione voluptates deleniti, officiis, possimus omnis ad nostrum quia! Illo ratione praesentium quasi id vel quo facilis at! Nisi quae fugiat ratione odio esse ab rem dolores alias excepturi, soluta at! Eligendi impedit ducimus quia dolor recusandae veritatis beatae quisquam sit! Libero ipsa tempora cupiditate. Voluptatum necessitatibus quisquam dolores omnis voluptatem quae ipsum molestiae voluptas commodi, voluptates eius rem distinctio nulla accusamus architecto recusandae. Hic culpa amet voluptas blanditiis iusto corrupti vitae 
-  s necessitatibus? Doloribus quibusdam, delectus ut, veniam fuga tempora voluptate eaque accusamus praesentium reprehenderit architecto. Corrupti, architecto neque libero exercitationem voluptas ex dolor, rerum hic doloribus atque nam fuga quidem quasi harum ut laudantium fugit facilis enim similique dolorem? Maiores a delectus repudiandae accusantium voluptate quod tempora necessitatibus doloribus culpa esse alias, et doloremque commodi! Earum nam tempore ipsum voluptatibus aliquam id nostrum reiciendis facere magni veritatis illo eius accusamus amet consequatur, pariatur et quo autem ipsam rerum. Ipsum sapiente, minima vitae accusantium fugiat officia voluptatem recusandae repellendus repudiandae eos animi incidunt distinctio dolore temporibus esse ipsa provident expedita exercitationem omnis dolorem voluptatum. Architecto minima hic optio repudiandae sit. Natus non fugit totam? Magni nesciunt odit vero provident quae? Illo id nesciunt mollitia dicta cupiditate deserunt, eaque deleniti beatae inventore unde consequatur quidem aliquam consectetur eveniet ex ipsa cum praesentium recusandae ab autem ut nobis molestias! Fugit sunt ea voluptates maxime? Nihil culpa alias laudantium consequuntur, velit omnis error totam qui exercitationem assumenda sunt optio accusamus et voluptate. Molestiae vel eius amet, voluptatibus dicta perspiciatis culpa labore sequi ratione laudantium deserunt. Consectetur unde eveniet saepe laborum quae sed quam nesciunt enim laboriosam aut voluptate a iure reprehenderit voluptates odit fugiat esse culpa cumque recusandae perspiciatis, tenetur ratione ab rerum? Dolores, qui numquam laudantium beatae nobis quaet. Nam, debitis facere accusamus nemo consequuntur eos. Voluptatum nisi animi provident cupiditate sapiente inventore ea ipsam! Facilis ea earum fuga obcaecati quia ipsa praesentium? In sunt, distinctio quasi temporibus vero blanditiis accusamus impedit officia dolorum porro, aut a eum veritatis dolores eaque, minus quod tempora quisquam eligendi aseque, atque in sed eius quis ipsam, debitis rem. Nulla quas repellat sequi ab, praesentium dignissimos iure assumenda rerum soluta nemo? Fugiat praesentium, sunt velit officia pardis exercitationem nihil inventore, quia atque dolorum molestiae? Quibusdam minus aspernatur ab. Facere, iusto ad fuga officiis autem blanditiis labore alias doloremque animi itaque voluptate. Cupiditate iste officiis recusandae soluta rem!
+        <section class="section2" id="2">
+            <h1>Slogan de la boite</h1>
+            <p>Paragraphe qui décrit brièvement la boite.</p>
+            <a class="bouton_menu" href="menu">Nos produits</a>
+        </section>
+        <section class="section3">
+            <div class="event">
+                <div class="event_text">
+                    <h1>Nom de la spécialité</h1>
+                    <p>Présentation de la spécialité</p>
+                </div>
+                <img src="Depositphotos_194491158_S.jpg" alt="" class="image_event">
+            </div>
+            <div class="images">
+                <a class="image1" href=""><span>juste pourla forme</span></a>
+                <a class="image2" href=""><span>juste pourla forme</span></a>
+                <a class="image3" href=""><span>juste pourla forme</span></a>
+            </div>
+        </section>
+        <!-- <section class="section3">
+           <div class="event">
+                
+           </div>
+        </section> -->
+        <section class="section4">
+            <h3>
+                Entrez votre addresse mail pour recevoir des offres de notre part
+            </h3>
+            <form action="" method="get">
+                <input type="email" name="Entrez votre addresse" id="mail" class="formulaire">
+                <input type="submit" value="Valider" class="bouton">
+            </form>
+        </section>
     </main>
+    <footer>
+        <div class="footer1">
+            <a href="home.html">Cocktail bar</a>
+            <a href="home.html"><h1>Nom du site</h1></a>
+        </div>
+        <div class="footer2">
+            <p>Rendez nous visite...</p>
+                <p>Addresse  Tel: 123-456-7890</p>
+                <p>Horaires d'ouverture</p>
+                <p>WORK WITH US  join our team at the bar  Contact us at info@mysite.com</p>
+        </div>
+    </footer>
 
 
 </body>
