gestion du responsive

--- a/home.html
+++ b/home.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-            <span class="logo"><a href="home.html">Nom du site</a></span>
+            <span class="logo"><a href="index.html">Nom du site</a></span>
             <ul class="lien_header">
                 <li><a href="#">Home</a></li>     
                 <li><a href="#2">About us</a></li>
-                <li><a href="#">menu</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="menu.html">menu</a></li>
+                <li><a href="#4">contact</a></li>
             </ul>
     </header>
     <main>
@@ -88,7 +88,7 @@
         <section class="section2" id="2">
             <h1>Slogan de la boite</h1>
             <p>Paragraphe qui décrit brièvement la boite.</p>
-            <a class="bouton_menu" href="menu">Nos produits</a>
+            <a class="bouton_menu" href="menu.html">Nos produits</a>
         </section>
         <section class="section3">
             <div class="event">
@@ -104,11 +104,6 @@
                 <a class="image3" href=""><span>juste pourla forme</span></a>
             </div>
         </section>
-        <!-- <section class="section3">
-           <div class="event">
-                
-           </div>
-        </section> -->
         <section class="section4">
             <h3>
                 Entrez votre addresse mail pour recevoir des offres de notre part
@@ -124,14 +119,12 @@
             <a href="home.html">Cocktail bar</a>
             <a href="home.html"><h1>Nom du site</h1></a>
         </div>
-        <div class="footer2">
+        <div class="footer2" id="4">
             <p>Rendez nous visite...</p>
                 <p>Addresse  Tel: 123-456-7890</p>
                 <p>Horaires d'ouverture</p>
                 <p>WORK WITH US  join our team at the bar  Contact us at info@mysite.com</p>
         </div>
     </footer>
-
-
 </body>
 </html>
