avancement sur le Go

--- a/home.html
+++ b/home.html
@@ -119,6 +119,10 @@
             <a href="home.html">Cocktail bar</a>
             <a href="home.html"><h1>Nom du site</h1></a>
         </div>
+        <!-- code ajouté -->
+    <button onclick="getCocktails()">Afficher les cocktails</button>
+	<div id="cocktails"></div>
+        <!-- code ajouté -->
         <div class="footer2" id="4">
             <p>Rendez nous visite...</p>
                 <p>Addresse  Tel: 123-456-7890</p>
@@ -127,4 +131,6 @@
         </div>
     </footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="mon-script.js"></script>
 </html>
