--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
     <main>
         <nav class="nav_main">
             <p>
-                Addresse | Horaire d'ouverture
+                15 Rue Le Barbusier Ais De Provenço, BP 94158 | Ouvert de 10H À 01H
             </p>
         </nav>
         <section class="section1">
@@ -86,17 +86,17 @@
             </div>
         </section>
         <section class="section2" id="2">
-            <h1>Slogan de la boite</h1>
+            <h1>Apaise ta soif!</h1>
             <p>Paragraphe qui décrit brièvement la boite.</p>
             <a class="bouton_menu" href="menu.html">Nos produits</a>
         </section>
         <section class="section3">
             <div class="event">
                 <div class="event_text">
-                    <h1>Nom de la spécialité</h1>
-                    <p>Présentation de la spécialité</p>
+                    <h1>Jeudi Saint</h1>
+                    <p>Le jeudi Soir, si vous prenez deux verres... eh bien le 3e vous est offert</p>
                 </div>
-                <img src="Depositphotos_194491158_S.jpg" alt="" class="image_event">
+                <img src="../images/img4.jpg" alt="" class="image_event">
             </div>
             <div class="images">
                 <a class="image1" href=""><span>juste pourla forme</span></a>
@@ -119,18 +119,12 @@
             <a href="home.html">Cocktail bar</a>
             <a href="home.html"><h1>Nom du site</h1></a>
         </div>
-        <!-- code ajouté -->
-    <button onclick="getCocktails()">Afficher les cocktails</button>
-	<div id="cocktails"></div>
-        <!-- code ajouté -->
-        <div class="footer2" id="4">
+        <div class="footer2">
             <p>Rendez nous visite...</p>
-                <p>Addresse  Tel: 123-456-7890</p>
-                <p>Horaires d'ouverture</p>
-                <p>WORK WITH US  join our team at the bar  Contact us at info@mysite.com</p>
+            <p id="coordonnées">Addresse  Tel: 123-456-7890</p>
+            <p>Horaires d'ouverture</p>
+            <p>WORK WITH US  join our team at the bar  Contact us at info@mysite.com</p>
         </div>
     </footer>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="mon-script.js"></script>
 </html>
