--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style/index.css">
     <title>Page de garde</title>
 </head>
 <body>
@@ -20,13 +20,26 @@
     <main> 
         <h1>Présentation</h1>
         <p>
-            Pour mon projet j'ai choisi l'api TheCocktailDB.</br>
-            Elle permet d'avoir la recette,notamment les différents ingrédients néccessaires à la préparation de différents types de boissons. 
+            Pour mon projet j'ai choisi l'api TheCocktailDB.<br>
+            Elle permet d'avoir la recette,notamment les différents ingrédients néccessaires à la préparation de différents types de boissons. <br>
+            L'idée est de pouvoir afficher des recettes de boisson en forme de carte après qu'une recherche ait été effectuée.
         </p>
         <h1>Utilisation</h1>
         <p>
 
         </p>
     </main>
+    <footer>
+        <div class="footer1">
+            <a href="home.html">Cocktail bar</a>
+            <a href="home.html"><h1>Nom du site</h1></a>
+        </div>
+        <div class="footer2">
+            <p>Rendez nous visite...</p>
+            <p id="coordonnées">Addresse  Tel: 123-456-7890</p>
+            <p>Horaires d'ouverture</p>
+            <p>WORK WITH US  join our team at the bar  Contact us at info@mysite.com</p>
+        </div>
+    </footer>
 </body>
 </html>
