verif des liens

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
                 <li><a href="#">Home</a></li>     
                 <li><a href="#2">About us</a></li>
                 <li><a href="menu.html">menu</a></li>
-                <li><a href="#4">contact</a></li>
+                <li><a href="#coordonnées">contact</a></li>
             </ul>
     </header>
     <main>
@@ -121,7 +121,7 @@
         </div>
         <div class="footer2">
             <p>Rendez nous visite...</p>
-            <p id="coordonnées">Addresse  Tel: 123-456-7890</p>
+            <p id="coordonnées">15 Rue Le Barbusier Ais De Provenço, BP 94158  Tel: 123-456-7890</p>
             <p>Horaires d'ouverture</p>
             <p>WORK WITH US  join our team at the bar  Contact us at info@mysite.com</p>
         </div>
