--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="home.html">Home</a></li>     
             <li><a href="home.html#2">About us</a></li>
             <li><a href="menu.html">menu</a></li>
-            <li><a href="menu.html#4">contact</a></li>
+            <li><a href="#coordonnées">contact</a></li>
         </ul>
     </header>
     <main> 
