--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
                     <h1>Jeudi Saint</h1>
                     <p>Le jeudi Soir, si vous prenez deux verres... eh bien le 3e vous est offert</p>
                 </div>
-                <img src="../images/img4.jpg" alt="" class="image_event">
+                <img src="/images/img4.jpg" alt="image de cocktail" class="image_event">
             </div>
             <div class="images">
                 <a class="image1" href=""><span>juste pourla forme</span></a>
