--- a/home.html
+++ b/home.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="images/logo.jpg"/>
 </head>
 <body>
     <header>
-            <span class="logo"><a href="index.html">Nom du site</a></span>
+            <span class="logo"><a href="index.html">Le Boivement</a></span>
             <ul class="lien_header">
-                <li><a href="#">Home</a></li>     
+                <li><a href="home.html">Home</a></li>     
                 <li><a href="#2">About us</a></li>
                 <li><a href="menu.html">menu</a></li>
                 <li><a href="#coordonnées">contact</a></li>
@@ -25,7 +26,7 @@
         </nav>
         <section class="section1">
             <div class="div_section1">
-                <h1>Nom du site</h1>
+                <h1>Le Boivement</h1>
                 <p>Coctktail Bar</p>
             </div>
             <div class="div_reservation">
@@ -87,7 +88,9 @@
         </section>
         <section class="section2" id="2">
             <h1>Apaise ta soif!</h1>
-            <p>Paragraphe qui décrit brièvement la boite.</p>
+            <p>Le Boivement est le lieu par excellence où vous pourrez vous désalterer.
+                Boire c'est manger 2 fois
+            </p>
             <a class="bouton_menu" href="menu.html">Nos produits</a>
         </section>
         <section class="section3">
@@ -96,7 +99,7 @@
                     <h1>Jeudi Saint</h1>
                     <p>Le jeudi Soir, si vous prenez deux verres... eh bien le 3e vous est offert</p>
                 </div>
-                <img src="/images/img4.jpg" alt="image de cocktail" class="image_event">
+                <img src="images/img4.jpg" alt="image de cocktail" class="image_event">
             </div>
             <div class="images">
                 <a class="image1" href=""><span>juste pourla forme</span></a>
@@ -117,12 +120,12 @@
     <footer>
         <div class="footer1">
             <a href="home.html">Cocktail bar</a>
-            <a href="home.html"><h1>Nom du site</h1></a>
+            <a href="home.html"><h1>Le Boivement</h1></a>
         </div>
         <div class="footer2">
             <p>Rendez nous visite...</p>
             <p id="coordonnées">15 Rue Le Barbusier Ais De Provenço, BP 94158  Tel: 123-456-7890</p>
-            <p>Horaires d'ouverture</p>
+            <p>Ouvert de 10H À 01H</p>
             <p>WORK WITH US  join our team at the bar  Contact us at info@mysite.com</p>
         </div>
     </footer>
