--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index.css">
+    <link rel="icon" href="images/logo.jpg"/>
     <title>Page de garde</title>
 </head>
 <body>
     <header>
-        <span class="logo"><a href="index.html">Nom du site</a></span>
+        <span class="logo"><a href="index.html">Le Boivement</a></span>
         <ul class="lien_header">
             <li><a href="home.html">Home</a></li>     
-            <li><a href="home.html#2">About us</a></li>
+            <li><a href="#2">About us</a></li>
             <li><a href="menu.html">menu</a></li>
             <li><a href="#coordonnées">contact</a></li>
         </ul>
-    </header>
+</header>
     <main> 
         <h1>Présentation</h1>
         <p>
@@ -32,12 +33,12 @@
     <footer>
         <div class="footer1">
             <a href="home.html">Cocktail bar</a>
-            <a href="home.html"><h1>Nom du site</h1></a>
+            <a href="home.html"><h1>Le Boivement</h1></a>
         </div>
         <div class="footer2">
             <p>Rendez nous visite...</p>
-            <p id="coordonnées">Addresse  Tel: 123-456-7890</p>
-            <p>Horaires d'ouverture</p>
+            <p id="coordonnées">15 Rue Le Barbusier Ais De Provenço, BP 94158  Tel: 123-456-7890</p>
+            <p>Ouvert de 10H À 01H</p>
             <p>WORK WITH US  join our team at the bar  Contact us at info@mysite.com</p>
         </div>
     </footer>
